sections/section-030/capstone/labs/lab-01/manifests/lab-start.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpcapstone-demo
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: cpcapstone-demo
  labels:
    app: orders-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-service
      version: v1
  template:
    metadata:
      labels:
        app: orders-service
        version: v1
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: orders-service
          image: nginx:1.27-alpine
          ports:
            - containerPort: 8084
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-conf
          configMap:
            name: orders-service-v1-nginx-conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-service
  namespace: cpcapstone-demo
  labels:
    app: payments-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-service
      version: v1
  template:
    metadata:
      labels:
        app: payments-service
        version: v1
    spec:
      containers:
        - name: payments-service
          image: mccutchen/go-httpbin:v2.15.0
          ports:
            - containerPort: 8080
          command: ["/bin/go-httpbin", "-port", "8080"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tester
  namespace: cpcapstone-demo
  labels:
    app: tester
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tester
  template:
    metadata:
      labels:
        app: tester
    spec:
      containers:
        - name: tester
          image: curlimages/curl
          command: ["sh", "-c", "while true; do sleep 30; done"]
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: cpcapstone-demo
  labels:
    app: orders-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8084
  selector:
    app: orders-service
---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: cpcapstone-demo
  labels:
    app: payments-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: payments-service
